--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,3 +17,20 @@ html {
   max-width: 1140px;
   margin: 0 auto;
 }
+header {
+  background-image: url(./images/hero.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
+
+.hero-text-box {
+  position: absolute;
+  width: 1140px;
+  top: 50%;
+  left: 50%;
+}
+
+h1 {
+  margin: 0px !important;
+}
