--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,7 +18,8 @@ html {
   margin: 0 auto;
 }
 header {
-  background-image: url(./images/hero.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(./images/hero.jpg);
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -29,6 +30,7 @@ header {
   width: 1140px;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 h1 {
