--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,11 +34,34 @@ header {
 }
 
 h1 {
-  margin: 0px !important;
+  margin-top: 0px !important;
   color: #fff;
   font-size: 240%;
   font-weight: 300;
   text-transform: uppercase;
   letter-spacing: 1px;
   word-spacing: 4px;
+  margin-bottom: 20px;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  padding: 10px 30px;
+  font-weight: 300;
+  text-decoration: none;
+  border-radius: 200px;
+}
+
+.btn-full:link,
+.btn-full:visited {
+  background-color: #e67e22;
+  border: 1px solid #e67e22;
+  color: white;
+}
+
+.btn-ghost:link,
+.btn-ghost:visited {
+  border: 1px solid #e67e22;
+  color: #e67e22;
 }
